# python-cookie

./: cookiecutter.json  pyproject.toml
hooks/: pre_gen_project.py
tests/: test_license.py  test_readme.py  test_setup.py  test_structure.py
{{cookiecutter.project_slug}}/: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  requirements_dev.txt  setup.py
