[tool.poetry]
name = "python_cookie"
version = "0.1.0"
description = "Cookiecutter template for a Python package"
authors = ["Dima Koskin <dmksknn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.0"
pytest = "^5.3.5"
pytest-cookies = "^0.5.1"
pylint = "^2.4.4"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
